# websockets

./: Cargo.toml  Dockerfile  Makefile  docker-compose.yaml
app/: Dockerfile  Makefile  bun.lockb  docker-compose.yaml  package.json  tailwind.config.js
app/app/: layout.tsx
app/app/(landing)/: layout.tsx  page.tsx
app/app/(landing)/components/: sign-in.tsx
app/app/(landing)/functions/: signin.ts
app/app/(messages)/@groups/: page.tsx
app/app/(messages)/@messages/: page.tsx
app/app/(messages)/g/: layout.tsx  page.tsx
app/app/(messages)/g/@groups/: page.tsx
app/app/(messages)/g/@groups/components/: group-form.tsx  settings.tsx
app/app/(messages)/g/@messages/: page.tsx
app/app/(messages)/g/components/: search.tsx
app/app/components/: button.tsx  card.tsx  input.tsx  label.tsx
app/app/hooks/: use-session.ts  use-swr.ts
app/prisma/: schema.prisma
db/migrations/: initial.sql
services/auth/: Cargo.toml  Dockerfile  Makefile  docker-compose.yaml
services/auth/app/: Cargo.toml
services/auth/app/src/user/: mod.rs
services/auth/db/: Cargo.toml
services/auth/db/migrations/: initial.sql
services/auth/db/src/user/: mod.rs
services/auth/http/: Cargo.toml
services/auth/http/src/: lib.rs  main.rs
services/auth/http/src/jwt/: mod.rs
services/auth/http/src/responses/: mod.rs
services/auth/http/src/routes/user/: mod.rs
services/auth/http/src/server/: mod.rs
services/messages/: Dockerfile  Makefile  docker-compose.yaml
services/messages/app/: Cargo.toml
services/messages/app/src/message/: mod.rs
services/messages/db/: Cargo.toml
services/messages/db/migrations/: initial.sql
services/messages/db/src/messages/: mod.rs
src/: main.rs
