[package]
name = "http"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1"
axum = { version = "0.7", features = ["ws"] }
tokio = { version = "1.0", features = ["full"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5.0", features = ["fs", "trace", "cors"] }
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
jsonwebtoken = "9"
time = "0.3.20"
serde = "1"
uuid = { version = "1.1.2", features = ["serde", "v4"] }
app = { path = "../app" }
db = { path = "../db" }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "time", "uuid"] }
